--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 :root {
   --shadow: 0 2px 3px rgba(56, 58, 51, 0.3);
-  --nav-shadow: 0 5px 3px rgba(230, 186, 14, 0.3);
+  --nav-shadow: rgba(230, 186, 14, 0.07) 0px 1px 1px, rgba(230, 186, 14, 0.07) 0px 2px 2px, rgba(230, 186, 14, 0.07) 0px 4px 4px, rgba(230, 186, 14, 0.07) 0px 8px 8px, rgba(230, 186, 14, 0.07) 0px 16px 16px;
   --brand-color: #e6ba0e;
 }
 
@@ -70,6 +70,17 @@ li {
 .nav-link:hover {
   color: var(--brand-color);
   box-shadow: var(--nav-shadow);
+}
+
+/*HERO*/
+.hero-container {
+  padding: 0 !important;
+  height: 100vh;
+  width: 100vw;
+  max-width: 100%;
+  background-image: url("https://raw.githubusercontent.com/CrispyBcn/CrunchyLtd/master/images/hero.jpg");
+  background-size: cover;
+  filter: brightness(85%) contrast(85%) saturate(95%);
 }
 
 .container {
@@ -388,9 +399,6 @@ footer {
   }
   .nav-link {
     padding: 2rem 1rem;
-  }
-  main {
-    padding: 20px;
   }
   footer {
     padding: 10px;
