--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,18 @@ li {
   left: 10%;
   color: #ffffff;
   text-shadow: 1px 1px 3px #000000;
+  animation: intro 1.5s ease 1;
+}
+
+@keyframes intro {
+  0% {
+    opacity: 0;
+    transform: translateY(-25%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .hero-text h1 {
