--- a/styles.css
+++ b/styles.css
@@ -354,7 +354,7 @@ footer {
 
 #email-section {
   max-width: 300px;
-  text-align: center;
+  text-align: left;
 }
 
 #email {
@@ -396,7 +396,7 @@ footer {
 .hours {
   font-weight: 600;
   font-size: 2.2rem;
-  margin-top: 10px;
+  margin-top: 17px;
 }
 
 #fb-btn {
