--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap'); 
-
 * {
   box-sizing: border-box;
 }
@@ -545,6 +541,13 @@ footer {
   #map {
     width: 300px;
     height: 180px;
+  }
+}
+
+@media (max-width: 460px) {
+  .dwn-icon {
+    position: relative;
+    top: 50%;
   }
 }
 
